Fix backdrop index on mobile devices

--- a/app/themes/tekyla/stylesheets/main.scss
+++ b/app/themes/tekyla/stylesheets/main.scss
@@ -2558,3 +2558,6 @@ a[data-annotate] {
   }
 }
 
+.dropdown-backdrop {
+  z-index: -1;
+}
